feat : crear modelos de materia y estudiantes

--- a/RegistroEstudiantes/appsettings.json
+++ b/RegistroEstudiantes/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-RegistroEstudiantes-7AD49008-64F0-4CDC-AA80-72E40123305B;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=PANCHO-PC;Database=RegistroEstudiantes;User Id=sa;Password=123"
   },
   "Logging": {
     "LogLevel": {
