feat : crud terminados estudiantes y materias

--- a/RegistroEstudiantes/appsettings.json
+++ b/RegistroEstudiantes/appsettings.json
@@ -1,6 +1,12 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=PANCHO-PC;Database=RegistroEstudiantes;User Id=sa;Password=123"
+
+    //primero hacer un Update-Database
+    //comando de mapeo con solo las tablas que queremos 
+    //
+    // Scaffold-DbContext "Server=PANCHO-PC;Database=RegistroEstudiantes;User Id=sa;Password=123" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -Tables estudiantes, materias
+    //
   },
   "Logging": {
     "LogLevel": {
