--- a/RegistroEstudiantes/appsettings.json
+++ b/RegistroEstudiantes/appsettings.json
@@ -3,9 +3,11 @@
     "DefaultConnection": "Server=PANCHO-PC;Database=RegistroEstudiantes;User Id=sa;Password=123"
 
     //primero hacer un Update-Database
+    
     //comando de mapeo con solo las tablas que queremos 
     //
-    // Scaffold-DbContext "Server=PANCHO-PC;Database=RegistroEstudiantes;User Id=sa;Password=123" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -Tables estudiantes, materias
+    // Scaffold-DbContext "Server=PANCHO-PC;Database=RegistroEstudiantes;User Id=sa;Password=123" 
+    //Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -Tables estudiantes, materias
     //
   },
   "Logging": {
